--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -426,6 +426,7 @@ ul.header-menu-inner-link__list.list {
       border-radius: 32px;
       padding: 70px 24px 36px 24px;
       position: relative;
+      height: 370px;
       &-logo {
         position: absolute;
         z-index: 4;
@@ -656,6 +657,13 @@ marquee {
   right: 0;
   bottom: 0;
 }
+.spec-programs-desc-img-1 {
+  display: none;
+}
+.spec-programs-desc-img-2 {
+  display: none;
+}
+
 
 .support-form {
   background-color: $black;
@@ -754,7 +762,7 @@ marquee {
   &-inner {
     display: flex;
     flex-wrap: wrap;
-    gap: 40px 160px;
+    gap: 40px 100px;
     justify-content: center;
     padding: 32px 0 56px 0;
     align-items: center;
@@ -831,61 +839,69 @@ marquee {
       font-size: 34px;
       font-weight: 500;
       letter-spacing: 0.68px;
+      margin-bottom: 12px;
     }
 
     p {
       font-size: 16px;
       font-weight: 500;
+      margin-bottom: 35px;
+  
     }
 
     &__list {
       display: flex;
       gap: 20px;
-      margin: 35px 0 0 0;
     }
   }
 }
+.swiper {
+  width: 320px;
+  height: 324px;
+}
+
 
 .gallery-images {
   width: 214px;
   height: 324px;
+  transform: skewY(-8deg);
 }
 
-.custom-swiper {
-  //perspective: 100px;
-  transform: translateZ(-9.7rem);
-}
+// .custom-swiper {
+//   //perspective: 100px;
+//   transform: translateZ(-9.7rem);
+// }
 
-//
-//.swiper-slide {
-//  transform-style: preserve-3d;
-//  transition: transform 0.3s ease;
-//}
-//
-//.swiper-container {
-//  width: 100%;
-//  padding-top: 50px;
-//  padding-bottom: 50px;
-//}
-//.swiper-slide {
-//  background-position: center;
-//  background-size: cover;
-//  width: 300px;
-//  height: 300px;
-//}
+// //
+// //.swiper-slide {
+// //  transform-style: preserve-3d;
+// //  transition: transform 0.3s ease;
+// //}
+// //
+// //.swiper-container {
+// //  width: 100%;
+// //  padding-top: 50px;
+// //  padding-bottom: 50px;
+// //}
+// //.swiper-slide {
+// //  background-position: center;
+// //  background-size: cover;
+// //  width: 300px;
+// //  height: 300px;
+// //}
 
-.swiper-container {
-  width: 100%;
-  padding-top: 50px;
-  padding-bottom: 50px;
-}
+// .swiper-container {
+//   width: 100%;
+//   padding-top: 50px;
+//   padding-bottom: 50px;
+// }
 
-.swiper-slide {
-  background-position: center;
-  background-size: cover;
-  width: 300px;
-  height: 300px;
-}
+// .swiper-slide {
+//   background-position: center;
+//   background-size: cover;
+//   width: 300px;
+//   height: 300px;
+// }
 .reviews {
   padding: 32px 0;
 
