--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -3,16 +3,19 @@
     max-width: 425px;
   }
   .hero-content-bg {
-    top: -340px;
+    left: -4%;   
+    top: -116px; 
   }
-
   .hero-content-bg img {
-    max-width: 425px;
-    height: unset;
-    max-height: unset;
+    min-width: 425px;
+    height: 100vh;
+    overflow: hidden;    
   }
   .hero-content-text-main {
     padding-top: 38px;
+  }
+  .mobile-menu-container {
+    width: 425px;
   }
   .support-form .contacts-form-wrap {
     width: 160px;
@@ -120,15 +123,16 @@
   }
 
   .hero-content-bg {
-    top: -340px;
+    left: -4%;   
+    top: -116px; 
   }
-
   .hero-content-bg img {
-    max-width: 580px;
-    max-height: 1150px;
-    clip-path: inset(
-      0px 0px 280px 0px
-    ); /* Обрезаем нижнюю часть на 30 пикселей */
+    min-width: 580px;
+    height: 100vh;
+    overflow: hidden;    
+  }
+  .mobile-menu-container {
+    width: 580px;
   }
 
   .reviews-container {
@@ -320,17 +324,18 @@
     text-align: right;
   }
 
+  
   .hero {
     &-content {
-      height: 800px;
+      height: 75vh;
       gap: 32px;
       &-bg {
-        top: -194px;
+        top: -254px;
       }
       &-bg img {
-        max-width: 768px;
-        max-height: 1024px;
-        clip-path: unset;
+        min-width: 768px;
+        height: 100vh;
+        overflow: hidden;  
       }
       &-text {
         &-main {
@@ -380,6 +385,44 @@
         }
       }
     }
+  }
+  .mobile-menu-container {
+      padding: 32px 32px 69px 32px;  
+      width: 768px;
+          
+    }    
+  .mobile-menu-container__header {
+    margin: 0 0 165px 0;
+  }
+  .mobile-menu__list {
+    width: 230px;
+    gap: 42px;
+  }
+  .mobile-menu__item-link {
+    font-size: 48px;
+  }
+  .header-inner__link-logo img {
+    width: 370px;
+  }
+  .modal-btn-close svg {
+    width: 64px;
+    height: 64px;
+  }
+  .mobile-menu-footer {
+    display: flex;
+    justify-content: space-between;
+  }
+  .header-inner-link-menu svg {
+    width: 48px;
+    height: 48px;
+  }
+  .header-inner__language {
+    height: 56px;
+    align-items: center;
+  }
+  .header-language {
+    font-size: 26px;
+    
   }
   .about-us {
     padding: 64px 0;
@@ -999,15 +1042,17 @@
     line-height: normal;
   }
   .hero {
+    height: 80vh;
     &-content {
-      height: 800px;
+      height: 70vh;
       gap: 32px;
       &-bg {
-        top: -208px;
+        top: -270px;
       }
       &-bg img {
-        max-width: 1280px;
-        max-height: 1024px;
+          min-width: 1280px;
+          height: 100vh;
+          overflow: hidden;  
       }
       &-text {
         &-main {
@@ -1539,14 +1584,15 @@
 
   .hero {
     &-content {
-      height: 700px;
+      height: 70vh;
       gap: 32px;
       &-bg {
         top: -284px;
       }
       &-bg img {
-        max-width: 1440px;
-        max-height: 1152px;
+        min-width: 1440px;
+          height: 100vh;
+          overflow: hidden;
       }
       &-text {
         &-main {
@@ -1677,14 +1723,15 @@
   .hero {
     &-content {
       flex-direction: column;
-      height: 840px;
+      height: 70vh;
       gap: 206px;
       &-bg {
-        top: -220px;
+        top: -290px;
       }
       &-bg img {
-        max-width: 1920px;
-        max-height: 1080px;
+        min-width: 1920px;
+          height: 100vh;
+          overflow: hidden;
       }
       &-text {
         &-main {
