--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -876,6 +876,41 @@ marquee {
   transform: skewY(-8deg);
 }
 
+// .custom-swiper {
+//   //perspective: 100px;
+//   transform: translateZ(-9.7rem);
+// }
+
+// //
+// //.swiper-slide {
+// //  transform-style: preserve-3d;
+// //  transition: transform 0.3s ease;
+// //}
+// //
+// //.swiper-container {
+// //  width: 100%;
+// //  padding-top: 50px;
+// //  padding-bottom: 50px;
+// //}
+// //.swiper-slide {
+// //  background-position: center;
+// //  background-size: cover;
+// //  width: 300px;
+// //  height: 300px;
+// //}
+
+// .swiper-container {
+//   width: 100%;
+//   padding-top: 50px;
+//   padding-bottom: 50px;
+// }
+
+// .swiper-slide {
+//   background-position: center;
+//   background-size: cover;
+//   width: 300px;
+//   height: 300px;
+// }
 .reviews {
   padding: 32px 0;
 
@@ -964,9 +999,11 @@ marquee {
             stroke: $pink;
             transition: stroke 250ms cubic-bezier(0.4, 0, 0.2, 1);
           }
+
         }
         &-btn:hover {
           background-color: $pink;
+          
         }
         &-btn:hover svg {
           stroke: $white;
@@ -984,6 +1021,7 @@ marquee {
 .active-review {
   display: block;
 }
+
 
 .modal-wrap {
   position: fixed;
